# fair-ease-matcher

./: Dockerfile  documentation.md  fields-to-extract.txt  notes.txt  pyproject.toml  readme.md  updated-sparql-example.sparql  zappa_settings.json
aws/: neptune.md
compose/: docker-compose.yml  fair-ease-config-alex.ttl  fair-ease-config-etl.ttl  fair-ease-config-v2.ttl  fair-ease-config-v3.ttl  fair-ease-config-v6.ttl  fair-ease-config.ttl  log4j2.properties.debug  post-from-instance.txt  readme.md
data/: 000545_CFPOINT_77AR2009_00052_H09_V0.nc  000545_ODV_77AR2009_00095_H09_V0.txt  ArgoFloats_389b_381a_5a9a.nc  GL_PR_PF_1902271.nc  seanoe_metadata_export_20230815075227.txt
data/830af4b3-909f-438c-bf2d-da79f06f5083/: DNADerivedData.csv  citations.html  query.json
data/argo-xml/: C4FCB80C939B2B9DC3E9686BCDB67507780799C3.xml
data/categories/: SA Knowledge Base Library construction.xlsx
data/copernicus-xml/: 19ff80f5-5e4e-4e18-9fae-9c5e9cee8a9c.xml
data/emodnet-xml/: 14a242e9-c120-40ba-86ac-944bcd104607.xml  17AAEA293563942ABDB6A0D63FA4EC3B2B91EB1B.xml  348D9D7F7B0811313025529A9EFCE6311DFF2742.xml  787986636B1E2EBE98670EE927059FEF709FB832.xml  81fb45c7-aad4-4cb5-a85a-cb21253ae8f9.xml  b6eff0a9-ea56-408a-be00-fc458ae6ef54.xml
data/geodab-metadata/: 35E87B23228DA78A4776FB47D007ACEECB5442CF.xml  4A36591A6B9ADA8CC6231207891A600CF8E9FC8D.xml  5a6ff307-51bb-42de-8173-148ece8fc486.xml  872a9598-7f80-491d-8884-a042ba2808c4.xml  f1291380-dabe-4488-9615-2f3f63c55892.xml  f5f8c7ac-a08e-45e0-b613-5334a4aa8795.xml  (+1 more)
notebooks/: odv_matcher.ipynb
output/: 2023-09-04_23-07-41_output.json
src/: analyse.py  extracted_data.json  functions.py  geodab.py  model_functions.py  models.py  netcdf.py  odv.py  quack.py  query_template.sparql  sdn_extraction.py  sparql_queries.py  string_functions.py  xml_extract_all.py  xml_extraction.py
tests/: test_geodab.py  test_odv.py  test_quack.py  test_sdn.py
vocabs/: db_generation.md
(+18 files in other folders)
