[tool.poetry]
name = "bodc-matcher"
version = "0.1.0"
description = ""
authors = ["david <dcchabgood@gmail.com>"]
readme = "README.md"
packages = [{include = "bodc_matcher"}]

[tool.poetry.dependencies]
python = "^3.10"
sparqlwrapper = "^2.0.0"
cython = "^3.0.0"
setuptools = "^68.1.2"
pytest = "^7.4.0"
httpx = "^0.24.1"
jinja2 = "^3.1.2"
flask = "^2.3.3"
zappa = "^0.57.0"
uvicorn = "^0.23.2"
flask-cors = "^4.0.0"
pydantic = "^2.3.0"
openpyxl = "^3.1.2"
netcdf4 = "^1.6.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
